tests/baselines/reference/parserPostfixUnaryExpression1.errors.txt
parserPostfixUnaryExpression1.ts(1,1): error TS2304: Cannot find name 'foo'.
parserPostfixUnaryExpression1.ts(1,8): error TS1005: ';' expected.
parserPostfixUnaryExpression1.ts(1,10): error TS1109: Expression expected.


==== parserPostfixUnaryExpression1.ts (3 errors) ====
    foo ++ ++;
    ~~~
!!! error TS2304: Cannot find name 'foo'.
           ~~
!!! error TS1005: ';' expected.
             ~
!!! error TS1109: Expression expected.